--- a/4주차 html&css-2/2-12 html.html
+++ b/4주차 html&css-2/2-12 html.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>김멋사의 이력서</title>
-  <link rel="stylesheet" href="codelion.css">
+  <link rel="stylesheet" href="2-12 css.css">
 </head>
 <body>
   <div class="mainbox">
