--- a/4주차 html&css-2/my_resume.html
+++ b/4주차 html&css-2/my_resume.html
@@ -25,18 +25,18 @@
 	<section>
 		<h2>EDUCATION</h2>
 		<div class="float-wrap2">
-        <p class="title-text">와부고등학교</p>
-        <p class="year-text">2018 - 2020</p>
-    	</div>
-		<div class="float-wrap2">
         <p class="title-text">성균관대학교</p>
         <p class="year-text">2021 - Now</p>
+    	</div>
+		<div class="float-wrap2">
+        <p class="title-text">와부고등학교</p>
+        <p class="year-text">2018 - 2020</p>
     	</div>	
 	</section>
 	<section>
 		<h2>ACTIVITIES</h2>
 		<div class="float-wrap2">
-        <p class="title-text">LIKELEION at SKKU</p>
+        <p class="title-text">LIKELION at SKKU</p>
         <p class="year-text">2022 - Now</p>
     	</div>
 		<div class="float-wrap2">
