--- a/4주차 html&css-2/my_resume.html
+++ b/4주차 html&css-2/my_resume.html
@@ -15,7 +15,7 @@
     <p class="email-text">heoeunse82@gmail.com</p>
     <p class="email-text">010-8337-7169</p>
     </div>
-	<img class="photo" src="images/증명사진.jpg" alt="증명사">
+	<img class="photo" src="images/증명사진.jpg" alt="증명사진">
 	</div>
 	<div class="subbox">	
 	<section>
